<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- connection info -->
    <string name="fn_hostname">dev.fieldnation.com</string>
    <string name="fn_grant_type">password</string>
    <string name="fn_client_id">demoapp</string>
    <string name="fn_client_secret">demopass</string>
    <string name="accounttype">com.fieldnation</string>
    <string name="authority">com.fieldnation.service</string>
    <!-- /connection info -->

    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <!-- general strings -->
    <string name="app_name">Field Nation</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_login_title">Field Nation Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="fieldnation_provider_name">Field Nation</string>
    <string name="refresh">Refresh</string>
    <!-- /general strings -->


    <!-- main activity strings -->
    <string name="launcher_open">I am Open</string>
    <string name="work_order_detail_title">Work Order</string>

    <!-- Drawer strings -->
    <string name="mywork_title">Work Orders</string>
    <string name="mywork_subtitle">Assigned, Pending Approval and Completed jobs</string>
    <string name="market_title">Market</string>
    <string name="market_subtitle">Available, Requested and Recruitment</string>
    <string name="payment_title">Payment</string>
    <string name="payment_subtitle">Pending, lorem ipsum and Ipsom Lorem</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Preferences and Switch Account</string>
    <string name="logout_title">Log Out</string>

    <!-- fragment strings -->
    <string name="no_data">No Data Available</string>

    <!-- my work categories -->
    <string name="my_work_category1">In Progress</string>
    <string name="my_work_category2">Assigned</string>
    <string name="my_work_category3">Completed</string>
    <string name="my_work_category4">Canceled</string>

    <!-- Account Preferences -->
    <string name="pref_sync">Sync Frequency</string>

    <string-array name="pref_sync_titles">
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_values">
        <item>1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- login error messages -->
    <string name="login_error_no_error">Success!</string>
    <string name="login_error_not_found_in_db">Authentication Failed, check your network settings, and retry.[1]</string>
    <string name="login_error_invalid_local_creds">Authentication Failed, check your network settings, and retry.[2]</string>
    <string name="login_error_invalid_remote_creds">Authentication Failed, please check username and password</string>

</resources>