<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Drawer"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Work orders -->

        <RelativeLayout
            android:id="@+id/mywork_view"
            style="@style/DrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/mywork_imageview"
                style="@style/DrawerItemIcon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/todo" />

            <TextView
                android:id="@+id/mywork_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/mywork_imageview"
                android:layout_toRightOf="@+id/mywork_imageview"
                android:text="@string/mywork_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/workorder_subtext_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mywork_title_textView"
                android:layout_toRightOf="@+id/mywork_imageview"
                android:text="@string/mywork_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <View
            style="@style/DrawerSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2px" />

        <!-- Market -->

        <RelativeLayout
            android:id="@+id/market_view"
            style="@style/DrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/market_imageview"
                style="@style/DrawerItemIcon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/hiring" />

            <TextView
                android:id="@+id/market_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/market_imageview"
                android:layout_toRightOf="@+id/market_imageview"
                android:text="@string/market_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/market_subtext_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/market_title_textview"
                android:layout_toRightOf="@+id/market_imageview"
                android:text="@string/market_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <View
            style="@style/DrawerSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2px" />

        <!-- Payment -->

        <RelativeLayout
            android:id="@+id/payment_view"
            style="@style/DrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/payment_imageview"
                style="@style/DrawerItemIcon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/payment" />

            <TextView
                android:id="@+id/payment_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/payment_imageview"
                android:layout_toRightOf="@+id/payment_imageview"
                android:text="@string/payment_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/payment_subtext_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_title_textview"
                android:layout_toRightOf="@+id/payment_imageview"
                android:text="@string/payment_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/payment_amount_textview"
                style="@style/DrawerPaymentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/payment_title_textview"
                android:layout_alignParentRight="true"
                android:text="$2,500" />
        </RelativeLayout>

        <View
            style="@style/DrawerSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2px" />

        <!-- Settings -->

        <RelativeLayout
            android:id="@+id/settings_view"
            style="@style/DrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/settings_imageview"
                style="@style/DrawerItemIcon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/settings" />

            <TextView
                android:id="@+id/settings_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/settings_imageview"
                android:layout_toRightOf="@+id/settings_imageview"
                android:text="@string/settings_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/settings_subtext_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_title_textview"
                android:layout_toRightOf="@+id/settings_imageview"
                android:text="@string/settings_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <View
            style="@style/DrawerSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2px" />

        <!-- Logout -->

        <RelativeLayout
            android:id="@+id/logout_view"
            style="@style/DrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logout_imageview"
                style="@style/DrawerItemIcon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logout" />

            <TextView
                android:id="@+id/title_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/logout_imageview"
                android:text="@string/logout_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <View
            style="@style/DrawerSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2px" />
    </LinearLayout>

</ScrollView>